# dagster_delta

./: 404.html  Dockerfile  LICENSE  README.md  docker-compose.yaml  index.html  justfile  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
dagster_delta/: stuff.py
data/dates/: result
docs/: example.ipynb
example/: index.html
tests/: test_stuff.py
