[tool.poetry]
name = "dagster_delta"
version = "0.0.1"
description = ""
authors = ["Evan Curtin"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.252"
black = "^23.1.0"
pytest = "^7.2.1"
mypy = "^1.0.1"
mkdocs = "^1.4.2"
mkdocs-material = ">=8.0.0,<9.0.0"
mkdocs-jupyter = "^0.22.0"
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
